<resources>
    <string name="app_name">TravelBuddy</string>

    <!-- Activity titles -->
    <string name="title_activity_main">Travel Buddy</string>
    <string name="title_activity_map_view">My Trip</string>
    <string name="title_activity_add_destination">Add Destination</string>
    <string name="title_activity_add_trip">Add Trip</string>
    <string name="title_activity_destination_info">Destination Info</string>

    <!-- Trip -->
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="add_trip">Add trip</string>
    <string name="start_date_hint">Start date e.g. \"Jan 21\"</string>
    <string name="end_date_hint">End date e.g. \"10.12.2015\"</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>

    <!-- Destination -->
    <string name="add_marker_action">Add marker</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="info">Additional info</string>
    <string name="info_hint">Additional info\nThis can be as long as you want!\nEnter important additional information\nabout your destination here!</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_destination">Add destination</string>
    <string name="mark_done">Mark as done</string>

</resources>
